service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
  namespace: my-app
spec:
  selector:
    app: hello-app
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
